[package]
name = "druid-todos"
version = "0.1.0"
authors = ["Ankur Sethi <contact@ankursethi.in>"]
edition = "2018"

[dependencies]
druid = { git = "https://github.com/xi-editor/druid.git", version = "0.4" }
app_dirs = "1.2.1"
serde = {version = "1.0.104", features = ["derive", "rc"] }
serde_json = "1.0.44"
